src/tests/errors/staticanalysis/naming/general4_fail.cmp
program general4_fail /* error, no procedure main() */
begin
  proc Proc()
  begin
    printstr( "Hello world!" );
  end
end